# passenger-rs

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml  release.yml
build-aux/arch/passenger-rs-bin/: .SRCINFO  PKGBUILD  passenger-rs.service  passenger-rs.sh  pkgbuild.sh
build-aux/debian/: control  postinst
src/: auth.rs  clap.rs  config.rs  lib.rs  login.rs  main.rs  server.rs  server_chat_completion.rs  server_copilot.rs  server_list_models.rs  server_ollama_chat.rs  server_ollama_tags.rs  server_openai_responses_chat.rs  storage.rs  token_manager.rs
src/copilot/: mod.rs  utils.rs
src/copilot/models/: mod.rs
src/openai/: mod.rs
src/openai/completion/models/: mod.rs  utils.rs
src/openai/responses/models/: mod.rs  prompt_request.rs  prompt_response.rs  utils.rs
src/resources/: chat_completions_response.json  copilot_request_with_tools_responses.json  copilot_response_with_tools_to_call.json  copilot_response_with_tools_to_call_to_openai_response.json  models_response.json  ollama_chat_response.json  rig_ollama_request.json  rig_ollama_request_multiple_tools.json  rig_openai_prompt_request.json  rig_openai_prompt_request_with_tools_result.json  rig_openai_prompt_request_with_tools_result_as_copilot_request.json
src/server/: chat_completion.rs  copilot.rs  mod.rs  ollama_chat.rs  ollama_tags.rs  openai_responses_chat.rs
src/server/ollama/: chat.rs  mod.rs  version.rs
src/server/openai/: chat_completion.rs  mod.rs  responses_chat.rs
tests/: auth_tests.rs  chat_completions_test.rs
