[package]
name = "passenger-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.18"
reqwest = { version = "0.11", features = ["stream", "gzip", "brotli", "deflate", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
axum = { version = "0.8.8", features = ["default", "macros"] }

[dev-dependencies]
wiremock = "0.6"
